k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dronacharya
  labels:
    app.kubernetes.io/name: dronacharya
    app.kubernetes.io/part-of: dronacharya
