k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dronacharya-web
  namespace: dronacharya
  labels:
    app: dronacharya-web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: dronacharya-web
